<resources>
    <string name="app_name">StoryApp</string>
    <string name="login">Masuk</string>
    <string name="register">Daftar</string>
    <string name="email">E-Mail</string>
    <string name="password">Sandi</string>
    <string name="name">Nama</string>
    <string name="message_login_page">Isi dulu data kamu ya!</string>
    <string name="title_welcome_page">STORY APP</string>
    <string name="message_welcome_page">Ayo, Bagikan Pengalamanmu</string>
    <string name="description">Deskripsi</string>
    <string name="desc_upload">Isi deskripsi gambarmu!</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="upload">Unggah</string>
    <string name="logout">Keluar</string>
    <string name="detail">Detail</string>
    <string name="add">Unggah</string>
    <string name="pass_8">Password tidak boleh kurang dari 8 karakter</string>
    <string name="permission_granted">Kamera Diizinkan</string>
    <string name="permission_denied">Kamera Tidak Diizinkan</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="get_location">Get Location</string>
    <string name="extra_long">Longitude: %1$s</string>
    <string name="extra_lat">Latitude: %1$s</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="hybrid_type">Hybrid Maps</string>
    <string name="terrain_type">Terrain Maps</string>
    <string name="retry">Muat Ulang</string>
    <string name="img_welcome">Selamat Datang</string>
    <string name="img_regis">Resgistrasi Dahulu</string>
    <string name="img_login">Login Dahulu</string>
    <string name="img_detail">Gambar Story Detail</string>
    <string name="img_list">Gambar Story List</string>
</resources>